#441090 As an app developer, I want to Invalidate an existing valid Session, for any User that logs out.
