# backend-api/routes/crRoutes.js
@@ -29,6 +29,8 @@ module.exports = (app) => {
     .post(SessionController.newSession)
     app.route("/sessions/me")
     .get(SessionController.reAuthenticate)
+    app.route("/auth/logout")
+    .delete(SessionController.removeSession)
 
     app.route("/UserRatings")
     .post(UserRatingsController.create)
